--- a/main.html
+++ b/main.html
@@ -142,6 +142,9 @@
     <script src="js/libs/acorn/infer.js"></script>
     <script src="js/libs/acorn/doc_comment.js"></script>
 
+    <script src="js/libs/prettier/standalone.js"></script>
+    <script src="js/libs/prettier/parser-babel.js"></script>
+
     <script src="EspruinoTools/espruino.js"></script>
     <!-- load console here, so we get any messages while loading -->
     <script src="js/core/settingsConsole.js"></script>
@@ -224,6 +227,7 @@
     <script src="js/libs/imageconverter.js"></script> <!-- for storage.js -->
     <script src="js/plugins/keyShortcuts.js"></script>
     <script src="js/plugins/terminalLogger.js"></script>
+    <script src="js/plugins/formatter.js"></script>
     <!-- js/plugins/_examplePlugin.js -->
 
 </body>
